--- a/src/404.html
+++ b/src/404.html
@@ -55,7 +55,7 @@
 
 <body>
   <h1>Page Not Found</h1>
-  <p>Oops This page doesn't exist.</p>
+  <p>Spur This page doesn't exist.</p>
 </body>
 
 </html>
